// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseCard renders the component 1`] = `
<body>
  <div>
    <div
      class="css-bsoumo"
      height="375px"
      width="300px"
    >
      <img
        height="70%"
        loading="lazy"
        src="test"
        width="70%"
      />
      <div
        class="css-r4xf1e"
        height="58%"
        style="position: absolute;"
        width="60%"
      />
      <div
        class="css-18jypgm"
      >
        Test
      </div>
      <div
        class="css-1fwq8k8"
      >
        Test
      </div>
      <button
        class="css-uawwaj"
      >
        Action
      </button>
    </div>
  </div>
</body>
`;

exports[`BaseCard renders the component with loading 1`] = `
<body>
  <div>
    <div
      class="css-bsoumo"
      height="375px"
      width="300px"
    >
      <div
        class="css-1yleju4"
        height="70%"
        width="70%"
      />
      <div
        class="css-as5bd0"
        height="24px"
        width="50%"
      />
      <div
        class="css-10uzq4l"
        height="16px"
        width="50%"
      />
      <div
        class="css-cdlkn0"
        height="50px"
        width="50%"
      />
    </div>
  </div>
</body>
`;
